[package]
name = "spaceship-derive"
version = "0.1.0"
edition = "2021"
description = "Crate with the spaceship derive macros"
authors = ["viktormarinho"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
http = "0.2.9"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "2.0.31"
